--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,35 @@
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
+        <maven.plugins.version>2.22.1</maven.plugins.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <testng.version>7.9.0</testng.version>
         <lombok.version>1.18.30</lombok.version>
         <awaitility.version>4.2.0</awaitility.version>
         <javafaker.version>1.0.2</javafaker.version>
+        <allure-maven.version>2.10.0</allure-maven.version>
+        <log4j.version>2.22.1</log4j.version>
+        <slf4j-reload4j.version>2.0.13</slf4j-reload4j.version>
+        <log4j-slf4j2-impl.version>2.23.1</log4j-slf4j2-impl.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.plugins.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>${allure-maven.version}</version>
+                <configuration>
+                    <reportVersion>2.10.0</reportVersion>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -43,6 +66,21 @@
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>${javafaker.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>${allure-maven.version}</version>
         </dependency>
     </dependencies>
 
